tooling/nargo_cli/tests/snapshots/execution_success/negated_jmpif_condition/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut x: Field) {
    let mut q: i32 = 0;
    if x != 10 { q = 2; };
    assert(q == 2);
}
